update-component-pakhozou

--- a/src/components/Authority/css/Authority.css
+++ b/src/components/Authority/css/Authority.css
@@ -1,5 +1,5 @@
 .RoleTable{
-  box-shadow: 2px 10px 10px rgba(0,0,0,.5)!important;
+  /*box-shadow: 2px 10px 10px rgba(0,0,0,.5)!important;*/
   margin: 10px auto;
   width: 800px;
 }
