--- a/src/components/Authority/css/Operational.css
+++ b/src/components/Authority/css/Operational.css
@@ -4,7 +4,7 @@
   lineHeight: 30px,
 }
 .RoleTable{
-  box-shadow: 2px 10px 10px rgba(0,0,0,.5)!important;
+  /*box-shadow: 2px 10px 10px rgba(0,0,0,.5)!important;*/
   margin: 10px auto;
   width: 800px;
 }
