--- a/src/containers/css/Login.css
+++ b/src/containers/css/Login.css
@@ -10,7 +10,31 @@
  .login-form-button {
   width: 100%;
 }
-.Login{
-  width: 450px;
-  margin: 100px auto;
+.LoginBox{
+    width: 650px;
+    height: 450px;
+    box-shadow: 0 0 10px 0 rgba(0,0,0,.5);
+    position: absolute;
+    top: 0;
+    left: 200px;
+    bottom: 0;
+    margin:auto;
+    background-color: rgba(255,255,255,.3);
+}
+.title{
+    margin-bottom: 50px;
+}
+.logmin{
+    height: 230px;
+    width: 300px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin:auto;
+}
+.bg{
+    background-image: linear-gradient(rgb(22,97,185),rgb(4,234,242));
+    height: 100vh;
 }
