--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -52,9 +52,9 @@
     line-height: 34px;
 }
 
-.firstCard>span:nth-of-type(1) {
-    margin-left: 80px;
-}
+/*.firstCard>span:nth-of-type(1) {*/
+    /*margin-left: 80px;*/
+/*}*/
 
 .firstCard>span:nth-of-type(3) {
     margin-right: 80px;
